swagger documentation improved
