# pkg/http/rest/addComment.go
@@ -19,10 +19,10 @@ import (
 // Creates a new comment
 // responses:
 //	201: createdResponse
-//	400: errorResponse
-//	401: errorResponse
-//  403: errorResponse
-//	409: errorResponse
+//	400: errorResponse400
+//	401: errorResponse401
+//  403: errorResponse403
+//	409: errorResponse409
 
 // AddComment returns handler for POST /comments requests
 func (s *Server) AddComment(assetType string) func(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
