# pkg/http/rest/getComment.go
@@ -15,10 +15,10 @@ import (
 // Returns a single comment from the repository
 // responses:
 //	200: commentResponse
-//	400: errorResponse
-//  401: errorResponse
-//  403: errorResponse
-//	404: errorResponse
+//	400: errorResponse400
+//  401: errorResponse401
+//  403: errorResponse403
+//	404: errorResponse404
 
 // GetComment returns handler for GET /comments/:id requests
 func (s *Server) GetComment(assetType string) func(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
